Update README to reflect current emulator capabilities and usage examples